objects/LLC_BI__Period_Consolidation__c.object
<CustomObject>
    <description>This object connects underwriting periods used in the consolidation to the period in the consolidation bundle.</description>
    <fields>
        <fullName>LLC_BI__Destination_Period__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>This field is required. The system automatically populates this required lookup field to reference the destination period in the consolidation bundle.</description>
        <inlineHelpText>This field is required. The system automatically populates this required lookup field to reference the destination period in the consolidation bundle.</inlineHelpText>
        <label>Destination Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Destination Period Consolidations</relationshipLabel>
        <relationshipName>Destination_Period_Consolidations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Percentage__c</fullName>
        <description>The user populates this required field to denote the percent of ownership a parent company has in a child company. The percent of ownership determines how much of the child company’s value to calculate in the parent company’s Financial Consolidation. By default, it is blank.</description>
        <label>Ownership Percentage</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Purpose__c</fullName>
        <description>The system automatically populates this required picklist field to indicate the type of aggregation. By default, it is Consolidations.</description>
        <inlineHelpText>The system automatically populates this required picklist field to indicate the type of aggregation. By default, it is Consolidations.</inlineHelpText>
        <label>Purpose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidation</fullName>
                    <default>true</default>
                    <label>Consolidation</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Selected__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The system automatically populates this required boolean field to determine which entities display in the Financial Consolidation. When the value is true, the entity displays.</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Period__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>This field is required. The system automatically populates this required lookup field to reference the source period in the consolidation bundle.</description>
        <inlineHelpText>This field is required. The system automatically populates this required lookup field to reference the source period in the consolidation bundle.</inlineHelpText>
        <label>Source Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Source Period Consolidations</relationshipLabel>
        <relationshipName>Source_Period_Consolidations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Supplemental_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. The system automatically populates this optional lookup field to reference the supplemental period in the consolidation bundle.</description>
        <inlineHelpText>This field is optional. The system automatically populates this optional lookup field to reference the supplemental period in the consolidation bundle.</inlineHelpText>
        <label>Supplemental Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Supplemental Period Consolidations</relationshipLabel>
        <relationshipName>Supplemental_Period_Consolidations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is required. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Period Consolidation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Period Consolidation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Period Consolidations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>